exports[`Markdown parser parses escaped chars correctly 1`] = `
Object {
  "children": Array [
    "I ",
    "\\*should\\* ",
    "see ",
    "asterisks",
  ],
  "type": "text",
}
`;

exports[`Markdown parser parses invalid emoji fragments correctly 1`] = `
Object {
  "children": Array [
    "one::",
    "
",
    "::two",
    "
",
    ":three?::",
    "
",
    "::four:",
    "
",
    "::",
  ],
  "type": "text",
}
`;

exports[`Markdown parser parses kitchen sink demo correctly 1`] = `
Object {
  "children": Array [
    "I ",
    "think ",
    "we ",
    "should ",
    "try ",
    "to ",
    "use ",
    Object {
      "children": Array [
        "i",
        "f",
        " ",
        "e",
        "l",
        "s",
        "e",
      ],
      "type": "inline-code",
    },
    " ",
    "statements ",
    Object {
      "children": Array [
        "i",
        "f",
        " ",
        "(",
        "v",
        "a",
        "r",
        " ",
        "=",
        "=",
        " ",
        "\"",
        "f",
        "o",
        "o",
        "\"",
        ")",
        "
",
        " ",
        " ",
        "e",
        "c",
        "h",
        "o",
        " ",
        "\"",
        "f",
        "o",
        "o",
        "\"",
        ";",
        "
",
        "e",
        "l",
        "s",
        "e",
        " ",
        "e",
        "c",
        "h",
        "o",
        " ",
        "\"",
        "b",
        "a",
        "r",
        "\"",
        ";",
      ],
      "type": "code-block",
    },
    "How ",
    "about ",
    Object {
      "children": Array [
        "b",
        "o",
        "l",
        "d",
      ],
      "type": "bold",
    },
    " ",
    "and ",
    Object {
      "children": Array [
        "i",
        "t",
        "a",
        "l",
        "i",
        "c",
        "?",
      ],
      "type": "italic",
    },
    " ",
    "nice.",
    "
",
    " ",
    "Now ",
    "youre ",
    "thinking ",
    "with ",
    Object {
      "children": Array [
        "p",
        "o",
        "r",
        "t",
        "a",
        "l",
        "s",
      ],
      "type": "strike",
    },
    " ",
    "crypto.",
    "
",
    " ",
    "how ",
    "about ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                "b",
                "o",
                "l",
                "d",
                " ",
                "a",
                "n",
                "d",
                " ",
                "i",
                "t",
                "a",
                "l",
                "i",
                "c",
                " ",
                "a",
                "n",
                "d",
                " ",
                "s",
                "t",
                "r",
                "i",
                "k",
                "e",
                " ",
                "t",
                "h",
                "r",
                "o",
                "u",
                "g",
                "h",
                "?",
              ],
              "type": "bold",
            },
          ],
          "type": "italic",
        },
      ],
      "type": "strike",
    },
    " ",
    "- ",
    "now ",
    "- ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "s",
            "o",
            "m",
            "e",
            " ",
            "b",
            "o",
            "l",
            "d",
          ],
          "type": "bold",
        },
        " ",
        "a",
        "n",
        "d",
        " ",
        "j",
        "u",
        "s",
        "t",
        " ",
        "i",
        "t",
        "a",
        "l",
        "i",
        "c",
      ],
      "type": "italic",
    },
  ],
  "type": "text",
}
`;

exports[`Markdown parser parses multiple adjacent emoji correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "ok_hand::skin-tone-2",
      ],
      "type": "emoji",
    },
    Object {
      "children": Array [
        "smile",
      ],
      "type": "emoji",
    },
    Object {
      "children": Array [
        "wink",
      ],
      "type": "emoji",
    },
  ],
  "type": "text",
}
`;

exports[`Markdown parser parses numbers and some symbols emoji 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "+1",
      ],
      "type": "emoji",
    },
    " ",
    Object {
      "children": Array [
        "100",
      ],
      "type": "emoji",
    },
  ],
  "type": "text",
}
`;

exports[`Markdown parser parses urls correctly 1`] = `
Object {
  "children": Array [
    "
",
    " ",
    " ",
    "Ignore:",
    "
",
    " ",
    " ",
    " ",
    " ",
    "a...b,",
    "
",
    " ",
    " ",
    " ",
    " ",
    "ftp://blah.com,",
    "
",
    " ",
    " ",
    " ",
    " ",
    "gopher://blah.com,",
    "
",
    " ",
    " ",
    " ",
    " ",
    "mailto:blah@blah.com",
    "
",
    " ",
    " ",
    "Include:",
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "http://keybase.io",
          ],
          "href": "http://keybase.io",
          "type": "link",
        },
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "https://keybase.io",
          ],
          "href": "https://keybase.io",
          "type": "link",
        },
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "HTTP://cnn.com",
          ],
          "href": "HTTP://cnn.com",
          "type": "link",
        },
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "http://twitter.com",
          ],
          "href": "http://twitter.com",
          "type": "link",
        },
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "google.com",
          ],
          "href": "http://google.com",
          "type": "link",
        },
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "amazon.co.uk",
          ],
          "href": "http://amazon.co.uk",
          "type": "link",
        },
        ".",
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "keybase.io",
          ],
          "href": "http://keybase.io",
          "type": "link",
        },
        ",",
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "keybase.io",
          ],
          "href": "http://keybase.io",
          "type": "link",
        },
        ".",
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "keybase.io",
          ],
          "href": "http://keybase.io",
          "type": "link",
        },
        "?",
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "keybase.io/a/user/lookup?one=1&two=2",
          ],
          "href": "http://keybase.io/a/user/lookup?one=1&two=2",
          "type": "link",
        },
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "keybase.io?blah=true",
          ],
          "href": "http://keybase.io?blah=true",
          "type": "link",
        },
      ],
      "type": "text",
    },
    "
",
    " ",
    " ",
    " ",
    " ",
    Object {
      "children": Array [
        Object {
          "children": Array [
            "http://keybase.io/blah/../up-one/index.html",
          ],
          "href": "http://keybase.io/blah/../up-one/index.html",
          "type": "link",
        },
      ],
      "type": "text",
    },
    "
",
  ],
  "type": "text",
}
`;
